--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - testing
+  pull_request:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
