--- a/app/package.json
+++ b/app/package.json
@@ -17,19 +17,23 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/form-data": "^2.5.0",
     "@types/helmet": "0.0.45",
     "@types/jest": "^25.1.2",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.37",
     "@types/supertest": "^2.0.8",
     "@types/swagger-ui-express": "^4.1.1",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "helmet": "^3.21.2",
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
