--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.2.0",
     "morgan": "^1.9.1",
+    "sightengine": "^1.3.1",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.3",
     "ts-jest": "^25.2.0"
