--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "@types/morgan": "^1.7.37",
     "@types/supertest": "^2.0.8",
     "@types/swagger-ui-express": "^4.1.1",
+    "algoliasearch": "^4.1.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
